// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreatePolicy /> spec renders the create component 1`] = `
<div
  style="padding: 25px 50px;"
>
  <h1
    class="euiTitle euiTitle--large"
  >
    Create
     policy
  </h1>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <h2
        class="euiTitle euiTitle--small"
      >
        Name policy
      </h2>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      class="euiText euiText--extraSmall"
    >
      <p>
        Policies let you automatically perform administrative operations on indices.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFormRow euiFormRow--compressed"
      id="some_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="some_html_id"
        >
          <div
            class="euiText euiText--small"
          >
            <h3>
              Policy ID
            </h3>
          </div>
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="some_html_id-help-0"
              class="euiFieldText euiFieldText--compressed"
              id="some_html_id"
              placeholder="example_policy"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="some_html_id-help-0"
        >
          Specify a unique ID that is easy to recognize and remember.
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 16px;"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiText euiText--small"
        >
          <h1>
            Define policy
            <span
              class="panel-header-count"
            >
               
               
            </span>
          </h1>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <span
              class="euiToolTipAnchor"
            >
              <button
                class="euiButton euiButton--primary euiButton--small"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  EuiIconMock
                  <span
                    class="euiButton__text"
                  >
                    Copy
                  </span>
                </span>
              </button>
            </span>
          </div>
          <div
            class="euiFlexItem"
          >
            <button
              class="euiButton euiButton--primary euiButton--small"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                EuiIconMock
                <span
                  class="euiButton__text"
                >
                  Auto Indent
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: initial;"
    >
      <div
        style="padding-left: 10px;"
      >
        <div
          class="euiText euiText--extraSmall"
        >
          <p>
            Create a policy with a JSON configuration file. This can be added directly in the code editor below.
          </p>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <textarea
        aria-label="Code Editor"
        class="euiTextArea euiTextArea--resizeVertical euiTextArea--compressed"
        rows="3"
      >
        {
    "policy": {
        "description": "A simple default policy that changes the replica count between hot and cold states.",
        "default_state": "example_hot_state",
        "states": [
            {
                "name": "example_hot_state",
                "actions": [
                    {
                        "replica_count": {
                            "number_of_replicas": 5
                        }
                    }
                ],
                "transitions": [
                    {
                        "state_name": "example_cold_state",
                        "conditions": {
                            "min_index_age": "30d"
                        }
                    }
                ]
            },
            {
                "name": "example_cold_state",
                "actions": [
                    {
                        "replica_count": {
                            "number_of_replicas": 2
                        }
                    }
                ],
                "transitions": []
            }
        ],
        "ism_template": {
            "index_patterns": [
                "example-index-*"
            ]
        }
    }
}
      </textarea>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
        data-test-subj="createPolicyCancelButton"
        type="button"
      >
        <span
          class="euiButtonContent euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            Cancel
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--small euiButton--fill"
        data-test-subj="createPolicyCreateButton"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Create
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<CreatePolicy /> spec renders the edit component 1`] = `
<div
  style="padding: 25px 50px;"
>
  <h1
    class="euiTitle euiTitle--large"
  >
    Edit
     policy
  </h1>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiCallOut euiCallOut--primary"
  >
    <div
      class="euiCallOutHeader"
    >
      EuiIconMock
      <span
        class="euiCallOutHeader__title"
      >
        Edits to the policy are not automatically applied to indices that are already being managed by this policy.
      </span>
    </div>
    <div
      class="euiText euiText--small"
    >
      <div
        class="euiTextColor euiTextColor--default"
      >
        <p>
          This ensures that any update to a policy doesn't harm indices that are running under an older version of the policy. To carry over your edits to these indices, please use the "Change Policy" under "Managed Indices" to reapply the policy after submitting your edits.
           
          <a
            class="euiLink euiLink--primary"
            href="https://opensearch.org/docs/im-plugin/ism/index/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
            EuiIconMock
            <span
              class="euiScreenReaderOnly"
            >
              (opens in a new tab or window)
            </span>
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <h2
        class="euiTitle euiTitle--small"
      >
        Name policy
      </h2>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      class="euiText euiText--extraSmall"
    >
      <p>
        Policies let you automatically perform administrative operations on indices.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFormRow euiFormRow--compressed"
      id="some_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="some_html_id"
        >
          <div
            class="euiText euiText--small"
          >
            <h3>
              Policy ID
            </h3>
          </div>
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed euiFormControlLayout--readOnly"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="some_html_id-help-0"
              class="euiFieldText euiFieldText--compressed"
              id="some_html_id"
              placeholder="example_policy"
              readonly=""
              type="text"
              value="some_policy"
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="some_html_id-help-0"
        >
          Specify a unique ID that is easy to recognize and remember.
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 16px;"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiText euiText--small"
        >
          <h1>
            Define policy
            <span
              class="panel-header-count"
            >
               
               
            </span>
          </h1>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <span
              class="euiToolTipAnchor"
            >
              <button
                class="euiButton euiButton--primary euiButton--small"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  EuiIconMock
                  <span
                    class="euiButton__text"
                  >
                    Copy
                  </span>
                </span>
              </button>
            </span>
          </div>
          <div
            class="euiFlexItem"
          >
            <button
              class="euiButton euiButton--primary euiButton--small"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                EuiIconMock
                <span
                  class="euiButton__text"
                >
                  Auto Indent
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: initial;"
    >
      <div
        style="padding-left: 10px;"
      >
        <div
          class="euiText euiText--extraSmall"
        >
          <p>
            Create a policy with a JSON configuration file. This can be added directly in the code editor below.
          </p>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <textarea
        aria-label="Code Editor"
        class="euiTextArea euiTextArea--resizeVertical euiTextArea--compressed"
        rows="3"
      >
        {
    "policy": {
        "policy": {
            "description": "A simple default policy that changes the replica count between hot and cold states.",
            "default_state": "example_hot_state",
            "states": [
                {
                    "name": "example_hot_state",
                    "actions": [
                        {
                            "replica_count": {
                                "number_of_replicas": 5
                            }
                        }
                    ],
                    "transitions": [
                        {
                            "state_name": "example_cold_state",
                            "conditions": {
                                "min_index_age": "30d"
                            }
                        }
                    ]
                },
                {
                    "name": "example_cold_state",
                    "actions": [
                        {
                            "replica_count": {
                                "number_of_replicas": 2
                            }
                        }
                    ],
                    "transitions": []
                }
            ],
            "ism_template": {
                "index_patterns": [
                    "example-index-*"
                ]
            }
        }
    }
}
      </textarea>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
        data-test-subj="createPolicyCancelButton"
        type="button"
      >
        <span
          class="euiButtonContent euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            Cancel
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--small euiButton--fill"
        data-test-subj="createPolicyCreateButton"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Update
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
